--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 
 @layer base {
   :root {
+    color-scheme: light dark;
+    
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -73,4 +75,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+::selection {
+  background-color: light-dark(#ffee00, #c74dab);
 }
